--- a/MirajAI/MirajAI.csproj
+++ b/MirajAI/MirajAI.csproj
@@ -6,4 +6,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Core\" />
+    <Folder Include="Layers\" />
+    <Folder Include="Utils\" />
+    <Folder Include="Optimizers\" />
+  </ItemGroup>
+
 </Project>
