--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -42,4 +42,4 @@ jobs:
 
     # Run tests
     - name: Test
-      run: dotnet test --no-build --verbosity normal --parallel
+      run: dotnet test --no-build --verbosity normal
