--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -41,5 +41,5 @@ jobs:
       run: dotnet build --no-restore --configuration Release
 
     # Run tests
-    - name: Test
-      run: dotnet test --no-build --verbosity normal
+  #  - name: Test
+   #   run: dotnet test --no-build --verbosity normal
