--- a/MirajAI/MirajAI.csproj
+++ b/MirajAI/MirajAI.csproj
@@ -9,12 +9,14 @@
   <ItemGroup>
     <Folder Include="Core\" />
     <Folder Include="Layers\" />
-    <Folder Include="Activations\" />
     <Folder Include="LossFunctions\" />
     <Folder Include="Models\" />
-    <Folder Include="Interfaces\" />
     <Folder Include="Utils\" />
     <Folder Include="Optimizers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Numerics.Tensors" Version="9.0.0" />
   </ItemGroup>
 
 </Project>
